# ftarc

./: .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  compose.yml  docker-compose.yml  pyproject.toml  setup.py  wercker.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  python-publish.yml  test.yml
ftarc/: __init__.py
ftarc/cli/: __init__.py  builder.py  constants.py  main.py  pipeline.py  util.py
ftarc/static/: example_ftarc.yml  urls.yml
ftarc/task/: __init__.py  align.py  base.py  bwa.py  controller.py  core.py  download.py  downloader.py  fastqc.py  gatk.py  picard.py  ref.py  resource.py  samtools.py  trim.py  trimgalore.py  wget.py
ftarc/template/: resource_ftarc.yml.j2
