[project]
name = "ftarc"
version = "0.2.4"
description = "FASTQ-to-analysis-ready-CRAM Workflow Executor for Human Genome Sequencing"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Daichi Narushima", email = "dceoy@users.noreply.github.com"}]
maintainers = [{name = "Daichi Narushima", email = "dceoy@users.noreply.github.com"}]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.6"
dependencies = [
    "docopt",
    "jinja2",
    "luigi",
    "pip",
    "psutil",
    "pyyaml",
    "shoper",
]

[project.urls]
homepage = "https://github.com/dceoy/ftarc"
repository = "https://github.com/dceoy/ftarc"

[project.scripts]
ftarc = "ftarc.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ftarc"]

[tool.hatch.build.targets.wheel.sources]
"ftarc/static" = "ftarc/static"
"ftarc/template" = "ftarc/template"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
