[project]
name = "ftarc"
version = "0.3.0"
description = "FASTQ-to-analysis-ready-CRAM Workflow Executor for Human Genome Sequencing"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Daichi Narushima", email = "dceoy@users.noreply.github.com"}]
maintainers = [{name = "Daichi Narushima", email = "dceoy@users.noreply.github.com"}]
readme = "README.md"
keywords = ["bioinformatics", "genomics", "ngs", "fastq", "cram"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">= 3.11"
dependencies = [
  "docopt >= 0.6.2",
  "jinja2 >= 3.1.0",
  "luigi >= 3.5.0",
  "pip >= 24.0",
  "psutil >= 5.9.0",
  "pyyaml >= 6.0",
  "shoper >= 0.3.0",
]

[project.urls]
homepage = "https://github.com/dceoy/ftarc"
repository = "https://github.com/dceoy/ftarc.git"
documentation = "https://github.com/dceoy/ftarc/blob/main/README.md"

[project.scripts]
ftarc = "ftarc.cli.main:main"

[tool.uv]
dev-dependencies = [
  "ruff >= 0.12.0,<0.13.0",
  "pyright >= 1.1.379",
  "types-pyyaml >= 6.0.12.20240917",
]

[tool.uv.build-backend]
source-include = ["ftarc/**", "LICENSE"]

[tool.ruff]
line-length = 88
exclude = ["build", ".venv"]
preview = true

[tool.ruff.lint]
select = [
  "F",      # Pyflakes (F)
  "E",      # pycodestyle error (E)
  "W",      # pycodestyle warning (W)
  "C90",    # mccabe (C90)
  "I",      # isort (I)
  "N",      # pep8-naming (N)
  "D",      # pydocstyle (D)
  "UP",     # pyupgrade (UP)
  "S",      # flake8-bandit (S)
  "B",      # flake8-bugbear (B)
  "C4",     # flake8-comprehensions (C4)
  "SIM",    # flake8-simplify (SIM)
  "ARG",    # flake8-unused-arguments (ARG)
  "PD",     # pandas-vet (PD)
  "PLC",    # Pylint convention (PLC)
  "PLE",    # Pylint error (PLE)
  "PLR",    # Pylint refactor (PLR)
  "PLW",    # Pylint warning (PLW)
  "FLY",    # flynt (FLY)
  "NPY",    # NumPy-specific rules (NPY)
  "PERF",   # Perflint (PERF)
  "FURB",   # refurb (FURB)
  "RUF",    # Ruff-specific rules (RUF)
  "YTT",    # flake8-2020 (YTT)
  "ANN",    # flake8-annotations (ANN)
  "ASYNC",  # flake8-async (ASYNC)
  "BLE",    # flake8-blind-except (BLE)
  "FBT",    # flake8-boolean-trap (FBT)
  "A",      # flake8-builtins (A)
  "COM",    # flake8-commas (COM)
  # "CPY",    # flake8-copyright (CPY)
  "DTZ",    # flake8-datetimez (DTZ)
  "T10",    # flake8-debugger (T10)
  "DJ",     # flake8-django (DJ)
  "EM",     # flake8-errmsg (EM)
  "EXE",    # flake8-executable (EXE)
  "FA",     # flake8-future-annotations (FA)
  "ISC",    # flake8-implicit-str-concat (ISC)
  "ICN",    # flake8-import-conventions (ICN)
  "LOG",    # flake8-logging (LOG)
  "G",      # flake8-logging-format (G)
  "INP",    # flake8-no-pep420 (INP)
  "PIE",    # flake8-pie (PIE)
  # "T20",    # flake8-print (T20)
  "PYI",    # flake8-pyi (PYI)
  "PT",     # flake8-pytest-style (PT)
  "Q",      # flake8-quotes (Q)
  "RSE",    # flake8-raise (RSE)
  # "RET",    # flake8-return (RET)
  "SLF",    # flake8-self (SLF)
  "SLOT",   # flake8-slots (SLOT)
  "TID",    # flake8-tidy-imports (TID)
  "TCH",    # flake8-type-checking (TCH)
  "INT",    # flake8-gettext (INT)
  "PTH",    # flake8-use-pathlib (PTH)
  "TD",     # flake8-todos (TD)
  "FIX",    # flake8-fixme (FIX)
  "ERA",    # eradicate (ERA)
  "PGH",    # pygrep-hooks (PGH)
  "TRY",    # tryceratops (TRY)
  "FAST",   # FastAPI (FAST)
  "AIR",    # Airflow (AIR)
  "DOC",    # pydoclint (DOC)
]
ignore = [
  "COM812",   # missing-trailing-comma
  "B008",     # function-call-in-default-argument
  "A004",     # builtin-import-shadowing
  "FBT001",   # boolean-type-hint-positional-argument
  "FBT002",   # boolean-default-value-positional-argument
  "ANN401",   # any-type
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 50
max-locals = 30
max-statements = 60
max-branches = 30

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "D104",     # undocumented-public-package
]

[tool.pyright]
exclude = ["build", ".venv"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
threads = 0
reportArgumentType = "none"
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportGeneralTypeIssues = "none"
reportIncompatibleMethodOverride = "none"
reportIndexIssue = "none"
reportOperatorIssue = "none"
reportOptionalMemberAccess = "none"
reportReturnType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUntypedClassDecorator = "none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
